--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
+              <a class="nav-link active" aria-current="page" href="Bake-Pal-tte/">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="/about.html">About us</a>
@@ -44,7 +44,7 @@
               <a class="nav-link" href="/gallery.html">Gallery</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link " aria-current="page" href="/contact.html">Contact Us</a>
+              <a class="nav-link " aria-current="page" href="/Bake-Pal-tte/contact.html">Contact Us</a>
             </li>
           </ul>
           <form class="d-flex">
