--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="Bake-Pal-tte/">Home</a>
+              <a class="nav-link active" aria-current="page" href="/Bake-Pal-tte/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/about.html">About us</a>
+              <a class="nav-link" aria-current="page" href="/Bake-Pal-tte/about.html">About us</a>
             </li>
             
             <li class="nav-item">
-              <a class="nav-link" href="/gallery.html">Gallery</a>
+              <a class="nav-link" href="/Bake-Pal-tte/gallery.html">Gallery</a>
             </li>
             <li class="nav-item">
               <a class="nav-link " aria-current="page" href="/Bake-Pal-tte/contact.html">Contact Us</a>
