--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
     <!-- Optional JavaScript; choose one of the two! -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/">Bake Palètte</a>
+        <a class="navbar-brand" href="/Bake-Pal-tte/">Bake Palètte</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -32,16 +32,16 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="Bake-Pal-tte/">Home</a>
+              <a class="nav-link active" aria-current="page" href="/Bake-Pal-tte/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/about.html">About us</a>
+              <a class="nav-link" aria-current="page" href="/Bake-Pal-tte/about.html">About us</a>
             </li>
             
             <li class="nav-item">
-              <a class="nav-link" href="/gallery.html">Gallery</a>
+              <a class="nav-link" href="/Bake-Pal-tte/gallery.html">Gallery</a>
             </li>
             <li class="nav-item">
               <a class="nav-link " aria-current="page" href="/Bake-Pal-tte/contact.html">Contact Us</a>
