--- a/gallery.html
+++ b/gallery.html
@@ -19,7 +19,7 @@
     <!-- Optional JavaScript; choose one of the two! -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Bake Palètte</a>
+        <a class="navbar-brand" href="/Bake-Pal-tte/">Bake Palètte</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -80,7 +80,7 @@ Shot & Styled by
         <div class="col-md-5">
           <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
           width="500"
-          height="500"src="cookie-2.jpg" alt="">
+          height="500"src="Cookie-2.jpg" alt="">
             <title>Placeholder</title>
             <rect width="100%" height="100%" fill="#eee"></rect>
             <text x="50%" y="50%" fill="#aaa" dy=".3em"></text>
