--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Optional JavaScript; choose one of the two! -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/Bake-Pal-tte/">Bake Palètte</a>
+        <a class="navbar-brand" href="/">Bake Palètte</a>
         <button
           class="navbar-toggler"
           type="button"
