--- a/gallery.html
+++ b/gallery.html
@@ -79,7 +79,7 @@ Shot & Styled by
         <div class="col-md-5">
           <img  class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
           width="500"
-          height="500"src="brownie-2.jpg" alt="">
+          height="500"src="Cookie-2.jpg" alt="">
           
             <title>Placeholder</title>
             <rect width="100%" height="100%" fill="#eee"></rect>
