--- a/gallery.html
+++ b/gallery.html
@@ -238,7 +238,7 @@ Toasted mixture of rolled oats, nuts, dried fruits, seeds, spices, nut butters a
         <div class="col-md-5">
           <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
           width="500"
-          height="500"src="cookie-5.jpg" alt="">
+          height="500"src="Cookie-5.jpg" alt="">
             <title>Placeholder</title>
             <rect width="100%" height="100%" fill="#eee"></rect>
             <text x="50%" y="50%" fill="#aaa" dy=".3em"></text>
