--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                 Nutella chcoo chip cookies is not on our menu and it’s THE Cookie Monster! Every bite of this cookie will make you fall in love it and will always leave you to want more n more of it!
               
               </p>
-              <a href="/gallery.html" class="stretched-link">Know more</a>
+              <a href="/Bake-Pal-tte/gallery.html" class="stretched-link">Know more</a>
             </div>
             <div class="col-auto d-none d-lg-block">
               <img class="bd-placeholder-img"
@@ -265,7 +265,7 @@
                 This is a wider card with supporting text below as a natural
                 lead-in to additional content.
               </p>
-              <a href="/gallery.html" class="stretched-link">Know more</a>
+              <a href="/Bake-Pal-tte/gallery.html" class="stretched-link">Know more</a>
             </div>
             <div class="col-auto d-none d-lg-block">
               <img   class="bd-placeholder-img"
@@ -304,7 +304,7 @@
                 <br>
                 • Marble Tea cake
               </p>
-              <a href="/gallery.html" class="stretched-link">Know more</a>
+              <a href="/Bake-Pal-tte/gallery.html" class="stretched-link">Know more</a>
             </div>
             <div class="col-auto d-none d-lg-block">
               <img class="bd-placeholder-img"
@@ -330,7 +330,7 @@
                 Gift your loved ones this personalised cupcake box of 6.
 
               </p>
-              <a href="/gallery.html" class="stretched-link">Know more</a>
+              <a href="/Bake-Pal-tte/gallery.html" class="stretched-link">Know more</a>
             </div>
             <div class="col-auto d-none d-lg-block">
               <img   class="bd-placeholder-img"
